[package]
name = "fencesort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fencemap"
path = "src/lib.rs"

[[bin]]
name = "fencemap_perf"
path = "src/main.rs"

[profile.release]
debug = true

[dependencies]
